<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <Button
        android:id="@+id/new_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_order"/>

    <Button
        android:id="@+id/all_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_order"/>

    <Button
        android:id="@+id/insert_menu_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_menu"/>

</LinearLayout>
