<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutSpinCat"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_bg"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinCategory"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_refresh_black_24dp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:theme="@style/TextLabel">

        <AutoCompleteTextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaMenu"
            android:inputType="textCapSentences"
            android:textColor="@drawable/edittext_selector"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:theme="@style/TextLabel">

        <AutoCompleteTextView
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionMenu"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="10"
            android:textColor="@drawable/edittext_selector"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:theme="@style/TextLabel">

        <AutoCompleteTextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hargaMenu"
            android:inputType="number"
            android:textColor="@drawable/edittext_selector"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/outline_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <FrameLayout
            android:id="@+id/frameFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/rounded_bg">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/ivDeleteImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:src="@android:drawable/ic_delete"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_image"
                android:textColor="@color/grey_500"
                android:textSize="14sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_camera" />

            <ImageView
                android:id="@+id/ivFile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_folder" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/view_image_picker" />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btnSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/save"
        android:background="@color/grey_700"
        android:layout_margin="16dp"/>

</LinearLayout>
